[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii_hierarchy_cli"
description = "Command line calls to make ASCII hierarchies"
version = "0.1.0"
keywords = ["ascii", "hierarchy", "cli"]
requires-python = ">= 3.14.5"
license = "MIT"
license-files = ["../../LICENSE"]
dependencies = [
    "ascii_hierarchy_core @ file:../ascii_hierarchy_core",
]

[project.urls]
Repository = "https://github.com/FroSty361/ASCII-Hierarchy-Generator.git"

[tool.setuptools.packages.find]
where = ["src"]