[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii_hierarchy_core"
description = "Core code for generating ASCII hierarchy structures"
version = "0.1.0"
requires-python = ">= 3.14.5"
license = "MIT"
license-files = ["../../LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]